--- a/ProjectGame/Modules/Main.storyboard
+++ b/ProjectGame/Modules/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dTG-ov-kjH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OD3-v2-d13">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -357,10 +358,10 @@
             </objects>
             <point key="canvasLocation" x="3498.5507246376815" y="83.705357142857139"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--MainNC-->
         <scene sceneID="gWe-9y-5g1">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dTG-ov-kjH" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainNC" automaticallyAdjustsScrollViewInsets="NO" id="dTG-ov-kjH" customClass="MainNC" customModule="ProjectGame" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ScT-ak-AUp">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -376,11 +377,43 @@
             </objects>
             <point key="canvasLocation" x="1339" y="84"/>
         </scene>
+        <!--Launch ScreenVC-->
+        <scene sceneID="WUA-it-hoc">
+            <objects>
+                <viewController storyboardIdentifier="LaunchScreenVC" id="OD3-v2-d13" customClass="LaunchScreenVC" customModule="ProjectGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7X2-rg-D3r">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="viewBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Fpm-sH-Dyy">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="iTunesArtwork-1024" translatesAutoresizingMaskIntoConstraints="NO" id="QU3-vU-Au5">
+                                <rect key="frame" x="0.0" y="261" width="374" height="374"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="E9u-Iq-p9o"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="QU3-vU-Au5" id="hJ7-X6-nZ1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Swy-my-K7F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="307" y="84"/>
+        </scene>
     </scenes>
     <resources>
         <image name="cardBack" width="375" height="518"/>
         <image name="gear" catalog="system" width="128" height="119"/>
+        <image name="iTunesArtwork-1024" width="1024" height="1024"/>
         <image name="multiply" catalog="system" width="128" height="111"/>
         <image name="viewBackground" width="728" height="902"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
